test/spec_vectors/block/fail/module_66.wat
(module (func $type-break-last-void-vs-nums (result i32 i32) (block (result i32 i32) (br 0))))